fixed content overlapping

--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ table {
 .resultCalc {
   word-break: break-all;
   word-wrap: break-word;
+  float: right;
 }
 
 
